WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182908
[RenderTreeBuilder] REGRESSION(
r228238
) Detach renderer before destroying its subtree.
https://bugs.webkit.org/show_bug.cgi?id=182908
Summary
[RenderTreeBuilder] REGRESSION(r228238) Detach renderer before destroying its...
alan
Reported
2018-02-17 22:24:41 PST
r228238
changed the order and now when a renderer is getting destroyed, we nuke its subtree while the renderer is still attached. Apparently we first need to detach it first so that while we are nuking the subtree, the renderers can't get access to previous/next siblings and do "smart" normalization.
rdar://problem/37619394
Attachments
Patch
(4.69 KB, patch)
2018-02-17 22:57 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2018-02-17 22:25:07 PST
<
rdar://problem/37619394
>
alan
Comment 2
2018-02-17 22:57:54 PST
Created
attachment 334115
[details]
Patch
WebKit Commit Bot
Comment 3
2018-02-18 10:44:39 PST
Comment on
attachment 334115
[details]
Patch Clearing flags on attachment: 334115 Committed
r228606
: <
https://trac.webkit.org/changeset/228606
>
WebKit Commit Bot
Comment 4
2018-02-18 10:44:41 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug